re: rename ipynb

--- a/.github/workflows/jupyter_rerun.yml
+++ b/.github/workflows/jupyter_rerun.yml
@@ -1,35 +1,43 @@
 name: Rerun Jupyter Notebook
 
 on:
-  push:
-    paths:
-      - '**/*.ipynb'
-      - '**/*.py'
+    push:
+        paths:
+            - "**/*.ipynb"
+            - "**/*.py"
 
 jobs:
-  rerun-notebook:
-    runs-on: ubuntu-latest
+    rerun-notebook:
+        runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
+            - name: Set up Python
+              uses: actions/setup-python@v2
+              with:
+                  python-version: "3.8"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install jupyter nbconvert wandb
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install jupyter nbconvert wandb
 
-    - name: Configure wandb
-      env:
-        WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
-      run: |
-        wandb login $WANDB_API_KEY
+            - name: Configure wandb
+              env:
+                  WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
+              run: |
+                  wandb login $WANDB_API_KEY
 
-    - name: Execute Jupyter Notebook
-      run: |
-        jupyter nbconvert --to notebook --execute Lab 5-Spring 2025.ipynb --output executed_notebook.ipynb
+            - name: Execute Jupyter Notebook
+              run: |
+                  jupyter nbconvert --to notebook --execute lab_5.ipynb --output executed_notebook.ipynb
+
+                  - name: Log metrics and images to wandb
+                  run: |
+                    python -c "
+                      import wandb
+                      wandb.init(project='your_project_name')
+                      wandb.save('executed_notebook.ipynb')
+                      "
