feat: split ipykernal setup and execution

--- a/.github/workflows/jupyter_rerun.yml
+++ b/.github/workflows/jupyter_rerun.yml
@@ -23,7 +23,7 @@ jobs:
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install jupyter nbconvert wandb opencv-python matplotlib numpy scikit-learn python-dotenv scipy opencv-python-headless
+                  pip install jupyter nbconvert wandb opencv-python matplotlib numpy scikit-learn python-dotenv scipy opencv-python-headless ipykernel
 
             - name: Download haarcascade_frontalface_default.xml
               run: |
@@ -36,11 +36,13 @@ jobs:
               run: |
                   wandb login $WANDB_API_KEY
 
-            - name: Execute Jupyter Notebook
+            - name: Install Jupyter Kernel
               run: |
                   python -m ipykernel install --user --name=nbkernel
-                  jupyter nbconvert --to notebook --execute "lab_5.ipynb" --output executed_notebook.ipynb --ExecutePreprocessor.kernel_name=nbkernel
 
+            - name: Execute Jupyter Notebook
+              run: |
+                  jupyter nbconvert --to notebook --execute "lab_5.ipynb" --output executed_notebook.ipynb --ExecutePreprocessor.kernel_name=nbkernel --debug
             - name: Log metrics and images to wandb
               run: |
                   python -c "
